fix things + actually legible code

--- a/Modular/src/assets/quotes.css
+++ b/Modular/src/assets/quotes.css
@@ -1,17 +1,17 @@
 /* QUOTES */
 [class*="markup-"] blockquote {
 	padding: var(--quote-vertical-spacing) var(--quote-horizontal-spacing);
-	background-color: #a6da9525;
+	background: color-mix(in srgb, var(--modular-accent-color) 25%, transparent);
 	border-top-right-radius: var(--quote-border-radius);
 	border-bottom-right-radius: var(--quote-border-radius)
 }
 .theme-dark[class*="markup-"] blockquote {
-	color: hsl(#a6da95);
-	background-color: #a6da95
+	color: var(--modular-color-accent);
+	background-color: var(--modular-color-accent)
 }
 .theme-light[class*="markup-"] blockquote {
-	color: #a6da95
+	color: var(--modular-color-accent)
 }
 [class*="blockquoteDivider-"] {
-	background-color: #a6da95
+	background-color: var(--modular-color-accent)
 }
